# predicates

./: .gitignore  CMakeLists.txt
include/predicates/: float_number.hpp  interval_number.hpp  natural_number.hpp  predicates.hpp
src/: main.cpp  predicates.cpp
tests/: predicates_test.cpp
